==============
lxml changelog
==============

Under development
==================

Features added
--------------

* New helper functions ``strip_attributes()``, ``strip_elements()``,
  ``strip_tags()`` in lxml.etree to remove attributes/subtrees/tags
  from a subtree.

Bugs fixed
----------

Other changes
-------------


2.2.1 (2009-06-02)
==================

Features added
--------------

* Injecting default attributes into a document during XML Schema
  validation (also at parse time).

* Pass ``huge_tree`` parser option to disable parser security
  restrictions imposed by libxml2 2.7.

Bugs fixed
----------

* The script for statically building libxml2 and libxslt didn't work
  in Py3.

* ``XMLSchema()`` also passes invalid schema documents on to libxml2
  for parsing (which could lead to a crash before release 2.6.24).

Other changes
-------------


2.2 (2009-03-21)
================

Features added
--------------

* Support for ``standalone`` flag in XML declaration through
  ``tree.docinfo.standalone`` and by passing ``standalone=True/False``
  on serialisation.

Bugs fixed
----------

* Crash when parsing an XML Schema with external imports from a
  filename.


2.2beta4 (2009-02-27)
=====================

Features added
--------------

* Support strings and instantiable Element classes as child arguments
  to the constructor of custom Element classes.

* GZip compression support for serialisation to files and file-like
  objects.

Bugs fixed
----------

* Deep-copying an ElementTree copied neither its sibling PIs and
  comments nor its internal/external DTD subsets.

* Soupparser failed on broken attributes without values.

* Crash in XSLT when overwriting an already defined attribute using
  ``xsl:attribute``.

* Crash bug in exception handling code under Python 3.  This was due
  to a problem in Cython, not lxml itself.

* ``lxml.html.FormElement._name()`` failed for non top-level forms.

* ``TAG`` special attribute in constructor of custom Element classes