@@ -108,13 +108,23 @@ cdef class _TargetParserContext(_SaxParserContext):
         context._setTarget(self._python_target)
         return context
 
+    cdef void _cleanupTargetParserContext(self, xmlDoc* result):
+        if self._c_ctxt.myDoc is not NULL:
+            if self._c_ctxt.myDoc is not result and \
+                    self._c_ctxt.myDoc._private is NULL:
+                # no _Document proxy => orphen
+                tree.xmlFreeDoc(self._c_ctxt.myDoc)
+            self._c_ctxt.myDoc = NULL
+
     cdef object _handleParseResult(self, _BaseParser parser, xmlDoc* result,
                                    filename):
         cdef bint recover
         recover = parser._parse_options & xmlparser.XML_PARSE_RECOVER
+        if self._has_raised():
+            self._cleanupTargetParserContext(result)
+            self._raise_if_stored()
         if not self._c_ctxt.wellFormed and not recover:
             _raiseParseError(self._c_ctxt, filename, self._error_log)
-        self._raise_if_stored()
         return self._python_target.close()
 
     cdef xmlDoc* _handleParseResultDoc(self, _BaseParser parser,
@@ -124,13 +134,8 @@ cdef class _TargetParserContext(_SaxParserContext):
         if result is not NULL and result._private is NULL:
             # no _Document proxy => orphen
             tree.xmlFreeDoc(result)
-        if self._c_ctxt.myDoc is not NULL:
-            if self._c_ctxt.myDoc is not result and \
-                    self._c_ctxt.myDoc._private is NULL:
-                # no _Document proxy => orphen
-                tree.xmlFreeDoc(self._c_ctxt.myDoc)
-            self._c_ctxt.myDoc = NULL
+        self._cleanupTargetParserContext(result)
+        self._raise_if_stored()
         if not self._c_ctxt.wellFormed and not recover:
             _raiseParseError(self._c_ctxt, filename, self._error_log)
-        self._raise_if_stored()
         raise _TargetParserResult(self._python_target.close())
